--- a/new.html
+++ b/new.html
@@ -124,7 +124,7 @@
 	font-size:18px;
 	cursor:pointer;
 	border-radius:20px;
-	box-shadow:0 5px 5px rgba(0,0,0,0.2);">GET 1 FREE PRODUCT</button></a>
+	box-shadow:0 5px 5px rgba(0,0,0,0.2);">CLICK HERE TO GET 1 FREE PRODUCT</button></a>
 </center>
 
 <div id="instruction" style="padding:50px;left:100px;width:100%;">
