--- a/new.html
+++ b/new.html
@@ -5,12 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Store</title>
     <style>
-	   
-        body {
+        body1 {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
+        }
+        body {
+            margin: 0;
+            padding: 0;
+            background-image: url('slides/xmas.jpg');
+            /*background-size: cover; Ensures the image covers the entire screen */
+           /* background-repeat: no-repeat;  Prevents the image from repeating */
+            /*background-position: center;  Centers the image on the screen */
         }
         header {
             background-color: cornsilk;
@@ -109,25 +116,13 @@
 </center>
     </header>
 <center>
-<div id="update" style="width:100%;color:red;">
-<h1>(NEW ANNOUNCEMENT)</h1>
-<h1>Ten costumers  per day will receive 1 FREE product.</h1>
-<h1>Starting from December 16-20, 2024</h1>
+<div id="update" style="width:100%;color:white;background:linear-gradient(135deg, red, #ff758c, green);width:50%;border-radius:10px;padding:10px;">
+<h1>MERRY CHRISTMAS AND ADVANCED HAPPY NEW YEAR!!!</h1>
 </div>
-	<a href="home2.html" target="_parent"><button style="width:30%;
-	margin-top:50px;
-	padding:20px 0;
-	background:red;/*#6fd649;*/
-	color:#fff;
-	border:0;
-	outline:none;
-	font-size:18px;
-	cursor:pointer;
-	border-radius:20px;
-	box-shadow:0 5px 5px rgba(0,0,0,0.2);">CLICK HERE TO GET 1 FREE PRODUCT</button></a>
 </center>
-
-<div id="instruction" style="padding:50px;left:100px;width:100%;">
+<br><br>
+<center>
+<div id="instruction" style="padding:50px;left:100px;width:100%;background:lightcyan;width:50%;border-radius:10px;padding:10px;text-align:left;">
 <p><b>UNSAON PAG-ORDER?</b></p>
 <p><b>1.</b> Pangitaa ang gusto nimong orderon sa ubos.</p>
 <p><b>2.</b> Pinduta ang "Add to Cart" kung aduna na kay napili.</p>
@@ -138,6 +133,7 @@
 <p><b>7.</b> Pinduta ang "Place Order".</p>
 <p><b>8.</b> Humana. Paabuta ang ilang text sa imong cellphone para sa order update.</p>
 </div>
+</center>
 
     <div id="whole" class="container">
 
