--- a/new.html
+++ b/new.html
@@ -119,6 +119,11 @@
 <div id="update" style="width:100%;color:white;background:linear-gradient(135deg, red, #ff758c, green);width:50%;border-radius:10px;padding:10px;">
 <h1>MERRY CHRISTMAS AND ADVANCED HAPPY NEW YEAR!!!</h1>
 </div>
+	<br><br>
+    <video width="640" height="360" autoplay muted loop>
+        <source src="slides/vid.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
 </center>
 <br><br>
 <center>
