--- a/new.html
+++ b/new.html
@@ -119,11 +119,12 @@
 <div id="update" style="width:100%;color:white;background:linear-gradient(135deg, red, #ff758c, green);width:50%;border-radius:10px;padding:10px;">
 <h1>MERRY CHRISTMAS AND ADVANCED HAPPY NEW YEAR!!!</h1>
 </div>
-	<br><br>
+<br><br>
     <video width="640" height="360" autoplay muted loop>
         <source src="slides/vid.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
+
 </center>
 <br><br>
 <center>
@@ -141,6 +142,57 @@
 </center>
 
     <div id="whole" class="container">
+
+<!-- Product 77 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images4/dreamer.png">
+            <h3>Lovely</h3>
+            <h3>Dreamer</h3>
+		<p style="color:black;font-size:80%;">(Brume 10ml)</p>
+            <p><del>₱35.00</del></p>
+            <p>₱19.00</p>
+            <p>Stock: <span id="stock-product-77">10</span></p>
+            <input type="number" id="qty-product-77" min="1" max="10" value="1">
+            <button id="btn-product-77" onclick="addToCart('Lovely Dreamer', 19, 77)">Add to Cart</button>
+            <button id="cancel-product-77" onclick="cancelFromCart(77)" disabled>Cancel</button>
+        </div>
+<!-- Product 78 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images4/paris.png">
+            <h3>Paris</h3>
+		<p style="color:black;font-size:80%;">(Brume 10ml)</p>
+            <p><del>₱35.00</del></p>
+            <p>₱19.00</p>
+            <p>Stock: <span id="stock-product-78">10</span></p>
+            <input type="number" id="qty-product-78" min="1" max="10" value="1">
+            <button id="btn-product-78" onclick="addToCart('Paris', 19, 78)">Add to Cart</button>
+            <button id="cancel-product-78" onclick="cancelFromCart(78)" disabled>Cancel</button>
+        </div>
+<!-- Product 79 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images4/champagne.png">
+            <h3>Champagne</h3>
+            <h3>Sprinkles</h3>
+		<p style="color:black;font-size:80%;">(Brume 10ml)</p>
+            <p><del>₱35.00</del></p>
+            <p>₱19.00</p>
+            <p>Stock: <span id="stock-product-79">10</span></p>
+            <input type="number" id="qty-product-79" min="1" max="10" value="1">
+            <button id="btn-product-79" onclick="addToCart('Champagne Sprinkles', 19, 79)">Add to Cart</button>
+            <button id="cancel-product-79" onclick="cancelFromCart(79)" disabled>Cancel</button>
+        </div>
+<!-- Product 80 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images4/steel.png">
+            <h3>Steel</h3>
+		<p style="color:black;font-size:80%;">(Brume 10ml)</p>
+            <p><del>₱35.00</del></p>
+            <p>₱19.00</p>
+            <p>Stock: <span id="stock-product-80">10</span></p>
+            <input type="number" id="qty-product-80" min="1" max="10" value="1">
+            <button id="btn-product-80" onclick="addToCart('Steel', 19, 80)">Add to Cart</button>
+            <button id="cancel-product-80" onclick="cancelFromCart(80)" disabled>Cancel</button>
+        </div>
 
 
  <!-- Product 73 -->
@@ -231,11 +283,10 @@
             <img src="images4/per1.jpg" alt="Product 1">
             <h3>Peach Tea </h3>
 		<p style="color:black;font-size:80%;">(Victoria's Fleur 10ml)</p>
-            <p><del>₱35.00</del></p>
-            <p>Now ₱19.00</p>
+            <p>Now ₱24.00</p>
             <p>Stock: <span id="stock-product-27">10</span></p>
             <input type="number" id="qty-product-27" min="1" max="10" value="1">
-            <button id="btn-product-27" onclick="addToCart('Peach Tea (10ml)', 19, 27)">Add to Cart</button>
+            <button id="btn-product-27" onclick="addToCart('Peach Tea (10ml)', 24, 27)">Add to Cart</button>
             <button id="cancel-product-27" onclick="cancelFromCart(27)" disabled>Cancel</button>
         </div>
         <!-- Product 28 -->
@@ -243,11 +294,10 @@
             <img src="images4/per2.jpg" alt="Product 2">
             <h3>Sorbet</h3>
 		<p style="color:black;font-size:80%;">(Victoria's Fleur 10ml)</p>
-            <p><del>₱35.00</del></p>
-            <p>Now ₱19.00</p>
+            <p>Now ₱24.00</p>
             <p>Stock: <span id="stock-product-28">10</span></p>
             <input type="number" id="qty-product-28" min="1" max="10" value="1">
-            <button id="btn-product-28" onclick="addToCart('Sorbet (10ml)', 19, 28)">Add to Cart</button>
+            <button id="btn-product-28" onclick="addToCart('Sorbet (10ml)', 24, 28)">Add to Cart</button>
             <button id="cancel-product-28" onclick="cancelFromCart(28)" disabled>Cancel</button>
         </div>
 
@@ -256,11 +306,10 @@
             <img src="images4/per3.jpg" alt="Product 3">
             <h3>Coast</h3>
 		<p style="color:black;font-size:80%;">(Brume 10ml)</p>
-            <p><del>₱35.00</del></p>
-            <p>Now ₱19.00</p>
+            <p>Now ₱24.00</p>
             <p>Stock: <span id="stock-product-29">10</span></p>
             <input type="number" id="qty-product-29" min="1" max="10" value="1">
-            <button id="btn-product-29" onclick="addToCart('Coast (10ml)', 19, 29)">Add to Cart</button>
+            <button id="btn-product-29" onclick="addToCart('Coast (10ml)', 24, 29)">Add to Cart</button>
             <button id="cancel-product-29" onclick="cancelFromCart(29)" disabled>Cancel</button>
         </div>
 
@@ -269,11 +318,10 @@
             <img src="images4/per4.jpg">
             <h3>Suede</h3>
 		<p style="color:black;font-size:80%;">(Brume 10ml)</p>
-            <p><del>₱35.00</del></p>
-            <p>Now ₱19.00</p>
+            <p>Now ₱24.00</p>
             <p>Stock: <span id="stock-product-30">10</span></p>
             <input type="number" id="qty-product-30" min="1" max="10" value="1">
-            <button id="btn-product-30" onclick="addToCart('Suede (10ml)', 19, 30)">Add to Cart</button>
+            <button id="btn-product-30" onclick="addToCart('Suede (10ml)', 24, 30)">Add to Cart</button>
             <button id="cancel-product-30" onclick="cancelFromCart(30)" disabled>Cancel</button>
         </div>
 
@@ -283,11 +331,10 @@
             <img src="images4/per5.jpg">
             <h3>HC & Cream</h3>
 		<p style="color:black;font-size:80%;">(Brume 10ml)</p>
-            <p><del>₱35.00</del></p>
-            <p>₱19.00</p>
+            <p>Now ₱24.00</p>
             <p>Stock: <span id="stock-product-31">10</span></p>
             <input type="number" id="qty-product-31" min="1" max="10" value="1">
-            <button id="btn-product-31" onclick="addToCart('HC & Cream(10ml)', 19, 31)">Add to Cart</button>
+            <button id="btn-product-31" onclick="addToCart('HC & Cream(10ml)', 24, 31)">Add to Cart</button>
             <button id="cancel-product-31" onclick="cancelFromCart(31)" disabled>Cancel</button>
         </div> 
 
