--- a/healthbeauty.html
+++ b/healthbeauty.html
@@ -109,7 +109,7 @@
     </header>
 <center>
 <div id="update" style="width:100%;color:red;">
-<h1>ADVANCE MERRY CHRISTMAS AND HAPPY NEW YEAR!!!</h1>
+<h1> New Perfume Products Available! </h1>
 </div>
 </center>
 
@@ -254,6 +254,56 @@
             <button id="cancel-product-13" onclick="cancelFromCart(13)" disabled>Cancel</button>
         </div>
 
+<!-- Product 77 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images4/dreamer.png">
+            <h3>Lovely</h3>
+            <h3>Dreamer</h3>
+		<p style="color:black;font-size:80%;">(Brume 10ml)</p>
+            <p><del>₱35.00</del></p>
+            <p>₱19.00</p>
+            <p>Stock: <span id="stock-product-77">10</span></p>
+            <input type="number" id="qty-product-77" min="1" max="10" value="1">
+            <button id="btn-product-77" onclick="addToCart('Lovely Dreamer', 19, 77)">Add to Cart</button>
+            <button id="cancel-product-77" onclick="cancelFromCart(77)" disabled>Cancel</button>
+        </div>
+<!-- Product 78 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images4/paris.png">
+            <h3>Paris</h3>
+		<p style="color:black;font-size:80%;">(Brume 10ml)</p>
+            <p><del>₱35.00</del></p>
+            <p>₱19.00</p>
+            <p>Stock: <span id="stock-product-78">10</span></p>
+            <input type="number" id="qty-product-78" min="1" max="10" value="1">
+            <button id="btn-product-78" onclick="addToCart('Paris', 19, 78)">Add to Cart</button>
+            <button id="cancel-product-78" onclick="cancelFromCart(78)" disabled>Cancel</button>
+        </div>
+<!-- Product 79 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images4/champagne.png">
+            <h3>Champagne</h3>
+            <h3>Sprinkles</h3>
+		<p style="color:black;font-size:80%;">(Brume 10ml)</p>
+            <p><del>₱35.00</del></p>
+            <p>₱19.00</p>
+            <p>Stock: <span id="stock-product-79">10</span></p>
+            <input type="number" id="qty-product-79" min="1" max="10" value="1">
+            <button id="btn-product-79" onclick="addToCart('Champagne Sprinkles', 19, 79)">Add to Cart</button>
+            <button id="cancel-product-79" onclick="cancelFromCart(79)" disabled>Cancel</button>
+        </div>
+<!-- Product 80 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images4/steel.png">
+            <h3>Steel</h3>
+		<p style="color:black;font-size:80%;">(Brume 10ml)</p>
+            <p><del>₱35.00</del></p>
+            <p>₱19.00</p>
+            <p>Stock: <span id="stock-product-80">10</span></p>
+            <input type="number" id="qty-product-80" min="1" max="10" value="1">
+            <button id="btn-product-80" onclick="addToCart('Steel', 19, 80)">Add to Cart</button>
+            <button id="cancel-product-80" onclick="cancelFromCart(80)" disabled>Cancel</button>
+        </div>
 
 
 
@@ -317,11 +367,10 @@
             <img src="images4/per1.jpg" alt="Product 1">
             <h3>Peach Tea </h3>
 		<p style="color:black;font-size:80%;">(Victoria's Fleur 10ml)</p>
-            <p><del>₱35.00</del></p>
-            <p>Now ₱19.00</p>
+            <p>Now ₱24.00</p>
             <p>Stock: <span id="stock-product-1">10</span></p>
             <input type="number" id="qty-product-1" min="1" max="10" value="1">
-            <button id="btn-product-1" onclick="addToCart('Peach Tea (10ml)', 19, 1)">Add to Cart</button>
+            <button id="btn-product-1" onclick="addToCart('Peach Tea (10ml)', 24, 1)">Add to Cart</button>
             <button id="cancel-product-1" onclick="cancelFromCart(1)" disabled>Cancel</button>
         </div>
         <!-- Product 2 -->
@@ -329,11 +378,10 @@
             <img src="images4/per2.jpg" alt="Product 2">
             <h3>Sorbet</h3>
 		<p style="color:black;font-size:80%;">(Victoria's Fleur 10ml)</p>
-            <p><del>₱35.00</del></p>
-            <p>Now ₱19.00</p>
+            <p>Now ₱24.00</p>
             <p>Stock: <span id="stock-product-2">10</span></p>
             <input type="number" id="qty-product-2" min="1" max="10" value="1">
-            <button id="btn-product-2" onclick="addToCart('Sorbet (10ml)', 19, 2)">Add to Cart</button>
+            <button id="btn-product-2" onclick="addToCart('Sorbet (10ml)', 24, 2)">Add to Cart</button>
             <button id="cancel-product-2" onclick="cancelFromCart(2)" disabled>Cancel</button>
         </div>
 
@@ -342,11 +390,10 @@
             <img src="images4/per3.jpg" alt="Product 3">
             <h3>Coast</h3>
 		<p style="color:black;font-size:80%;">(Brume 10ml)</p>
-            <p><del>₱35.00</del></p>
-            <p>Now ₱19.00</p>
+            <p>Now ₱24.00</p>
             <p>Stock: <span id="stock-product-3">10</span></p>
             <input type="number" id="qty-product-3" min="1" max="10" value="1">
-            <button id="btn-product-3" onclick="addToCart('Coast (10ml)', 19, 3)">Add to Cart</button>
+            <button id="btn-product-3" onclick="addToCart('Coast (10ml)', 24, 3)">Add to Cart</button>
             <button id="cancel-product-3" onclick="cancelFromCart(3)" disabled>Cancel</button>
         </div>
 
@@ -355,11 +402,10 @@
             <img src="images4/per4.jpg">
             <h3>Suede</h3>
 		<p style="color:black;font-size:80%;">(Brume 10ml)</p>
-            <p><del>₱35.00</del></p>
-            <p>Now ₱19.00</p>
+            <p>Now ₱24.00</p>
             <p>Stock: <span id="stock-product-4">10</span></p>
             <input type="number" id="qty-product-4" min="1" max="10" value="1">
-            <button id="btn-product-4" onclick="addToCart('Suede (10ml)', 19, 4)">Add to Cart</button>
+            <button id="btn-product-4" onclick="addToCart('Suede (10ml)', 24, 4)">Add to Cart</button>
             <button id="cancel-product-4" onclick="cancelFromCart(4)" disabled>Cancel</button>
         </div>
 
@@ -369,11 +415,10 @@
             <img src="images4/per5.jpg">
             <h3>HC & Cream</h3>
 		<p style="color:black;font-size:80%;">(Brume Parfumee 10ml)</p>
-            <p><del>₱35.00</del></p>
-            <p>₱19.00</p>
+            <p>Now ₱24.00</p>
             <p>Stock: <span id="stock-product-5">10</span></p>
             <input type="number" id="qty-product-5" min="1" max="10" value="1">
-            <button id="btn-product-5" onclick="addToCart('HC & Cream(10ml)', 19, 5)">Add to Cart</button>
+            <button id="btn-product-5" onclick="addToCart('HC & Cream(10ml)', 24, 5)">Add to Cart</button>
             <button id="cancel-product-5" onclick="cancelFromCart(5)" disabled>Cancel</button>
         </div>
 
@@ -514,7 +559,7 @@
         let totalPrice = 0;
         let stocks = { 1: 10, 2: 10, 3: 10, 4:10, 5:10, 6:5, 7:5, 8:5, 9:10, 10:10,
 			 11:10, 12:10, 13:5, 14:5, 15:5, 16:5, 17:50, 18:50, 19:25, 20:0,
-			20:0, 21:0, 22:0, 23:0, 24:0, 25:0, 26:0, }; // Initial stock levels
+			20:0, 21:0, 22:0, 23:0, 24:0, 25:0, 26:0, 77:10, 78:10, 79:10, 80:10, }; // Initial stock levels
 
         function addToCart(productName, price, productId) {
             const qtyInput = document.getElementById(`qty-product-${productId}`);
