--- a/home.html
+++ b/home.html
@@ -18,6 +18,7 @@
 <center>
         <div class="logo" style="background:cornsilk;padding:10px;font-size: 30px;font-weight: bold;"><span style="color:red;">One</span> <span style="color:green;">Click</span> <span style="color:blue;">Store</span></div>
 <br>
+	<div class="logo" style="font-size: 12px;font-weight: bold;">Created by: JIMMY ODAL EGCALINOS</div>
 	<div class="logo" style="font-size: 12px;font-weight: bold;">Bonbon Upper, Loboc, Bohol</div>
 </center>
         <ul style="list-style: none;display: flex;">
