--- a/new.html
+++ b/new.html
@@ -121,7 +121,7 @@
 </div>
 <br><br>
     <video width="640" height="360" autoplay muted loop>
-        <source src="slides/vid.mp4" type="video/mp4">
+        <source src="slides/hny.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
