--- a/accessories.html
+++ b/accessories.html
@@ -1,5 +1,12 @@
 <html>
 <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: moccasin;
+		background:violet;
+        }
         header {
             background-color: cornsilk;
             color: #fff;
@@ -7,18 +14,359 @@
             text-align: center;
 		line-height:1;
         }
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            padding: 0;
+		width:100%;
+        }
+        .product {
+            background: #fff;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            margin: 10px;
+            text-align: center;
+            width: 140px;
+            padding: 10px;
+        }
+        .product img {
+            max-width: 100%;
+            height: 140px;
+            border-radius: 5px;
+        }
+        .product h3 {
+            font-size: 20px;
+            margin: 10px 0;
+        }
+        .product p {
+            color: #666;
+            font-size: 16px;
+        }
+        .product button {
+            background-color: #007BFF;
+            border: none;
+            color: white;
+            padding: 10px 15px;
+            cursor: pointer;
+            border-radius: 5px;
+            margin: 5px 0;
+        }
+        .product button:hover {
+            background-color: #0056b3;
+        }
+        .cart {
+            margin: 20px;
+            padding: 15px;
+            background: #fff;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        .cart h2 {
+            margin-top: 0;
+        }
+        .cart ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+        .cart ul li {
+            padding: 8px;
+            border-bottom: 1px solid #ddd;
+        }
+        .checkout-btn {
+            background-color: #28a745;
+            border: none;
+            color: white;
+            padding: 10px 20px;
+            cursor: pointer;
+            border-radius: 5px;
+            margin-top: 10px;
+            display: block;
+            width: 100%;
+            text-align: center;
+        }
+        .checkout-btn:hover {
+            background-color: #218838;
+        }
+	div {
+		width:140px;
+	}
 </style>
 <body style="background:yellow;">
 <br>
     <header >
 <center>
-<h1 style="color:blue;">ACCESSORIES</h1>
+<h1 style="color:blue;">Accessories</h1>
 </center>
     </header>
-<br><br><br>
+<div style="padding:50px;left:100px;width:100%;">
+<p><b>UNSAON PAG-ORDER?</b></p>
+<p><b>1.</b> Pangitaa ang gusto nimong orderon sa ubos.</p>
+<p><b>2.</b> Pinduta ang "Add to Cart" kung aduna na kay napili.</p>
+<p><b>3.</b> Tan.awa sa kina-ubsan ang Shopping Cart kung naa naba sa lista ang imong order.</p>
+<p><b>4.</b> Kung naa pakay idugang nga order buhata balik ang pag add to cart.</p>
+<p><b>5.</b> Kung wala nakay orderon, pwedi na pinduton ang checkout sa kina-ubsan.</p>
+<p><b>6.</b> Sa orange form, ibutang ang imong mga detalye. I-check pagbalik ang imong mobile number. </p>
+<p><b>7.</b> Pinduta ang "Place Order".</p>
+<p><b>8.</b> Humana. Paabuta ang ilang text sa imong cellphone para sa order update.</p>
+</div>
+
 <center>
-<h1>Soon to open...</h1>
+<h1>WE ARE NOW OPEN...</h1>
 </center>
+
+
+    <div class="container">
+     <!-- Product 133 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images3/watch.png" >
+            <h3>POSHI</h3>
+            <h4>Quartz Watch</h4>
+		<p style="color:black;font-size:80%;">(Gold For Women)</p>
+            <p>₱300.00</p>
+            <p>Stock: <span id="stock-product-133">2</span></p>
+            <input type="number" id="qty-product-133" min="1" max="2" value="1">
+            <button id="btn-product-133" onclick="addToCart('Quartz Watch (G)', 300, 133)">Add to Cart</button>
+            <button id="cancel-product-133" onclick="cancelFromCart(133)" disabled>Cancel</button>
+        </div>
+
+
+    <!-- Product 132 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images3/shaver.jpg" >
+            <h3>WJM Portable</h3>
+            <h4>Electric Shaver</h4>
+		<p style="color:black;font-size:80%;">(Color Blue)</p>
+            <p>₱99.00</p>
+            <p>Stock: <span id="stock-product-132">2</span></p>
+            <input type="number" id="qty-product-132" min="1" max="2" value="1">
+            <button id="btn-product-132" onclick="addToCart('Electric Shaver(Bl)', 99, 132)">Add to Cart</button>
+            <button id="cancel-product-132" onclick="cancelFromCart(132)" disabled>Cancel</button>
+        </div>
+
+
+
+
+
+
+
+
+    </div>
+
+<center>
+<div id="details" style="width:300px;background:orange;padding:10px;border-radius:15px;display:none;">
+<h3>CUSTOMER DETAILS</h3>
+    <form id="telegramForm">
+        <label for="text">Customer Name:</label><br>
+        <input type="text" id="name" name="text" required><br><br>
+
+	<label for="text">Address:</label><br>
+        <input type="text" id="address" name="text" required><br><br>
+
+
+        <label for="number">Mobile Number:</label><br>
+        <input type="number" id="number" name="number" required oninput="if(this.value.length > 11) this.value = this.value.slice(0, 11);"><br><br>
+
+        <button id="placebutton" class="checkout-btn" type="submit" style="background:red;width:50%;">Place Order</button>
+<p id="words"></p>
+    </form>
+</div>
+</center>
+
+
+<center>
+    <div class="cart" style="width:300px;">
+        <h2>Shopping Cart</h2>
+        <ul id="cart-list">
+            <!-- Items will be added here -->
+        </ul>
+	<p>Service/Shipping Fee: ₱1.00</p>
+        <p id="total-price">Total: ₱0.00</p>
+
+        <button id="checkoutbutton" class="checkout-btn" onclick="checkout()" style="width:50%;">Checkout</button>
+    </div>
+</center>
+
+
 </body>
+    <script>
+        let cart = [];
+        let totalPrice = 0;
+        let stocks = { 132:2, 133:2,}; // Initial stock levels
+
+        function addToCart(productName, price, productId) {
+            const qtyInput = document.getElementById(`qty-product-${productId}`);
+            const qty = parseInt(qtyInput.value);
+            const addToCartButton = document.getElementById(`btn-product-${productId}`);
+            const cancelButton = document.getElementById(`cancel-product-${productId}`);
+
+            if (stocks[productId] >= qty) {
+                stocks[productId] -= qty; // Deduct stock
+                cart.push({ id: productId, name: productName, perprice: price, price: price * qty, qty: qty });
+                totalPrice += price * qty;
+
+                updateStockUI(productId);
+                updateCartUI();
+
+                addToCartButton.disabled = true;
+                cancelButton.disabled = false; // Enable cancel button
+            } else {
+                alert('Not enough stock available!');
+            }
+        }
+
+        function cancelFromCart(productId) {
+            const cancelButton = document.getElementById(`cancel-product-${productId}`);
+            const addToCartButton = document.getElementById(`btn-product-${productId}`);
+
+            // Find and remove the product from the cart
+            const productIndex = cart.findIndex(item => item.id === productId);
+            if (productIndex !== -1) {
+                const product = cart[productIndex];
+                stocks[productId] += product.qty; // Restore stock
+                totalPrice -= product.price;
+
+                cart.splice(productIndex, 1); // Remove product from cart
+
+                updateStockUI(productId);
+                updateCartUI();
+
+                addToCartButton.disabled = false; // Re-enable Add to Cart button
+                cancelButton.disabled = true; // Disable Cancel button
+            }
+        }
+
+        function updateStockUI(productId) {
+            document.getElementById(`stock-product-${productId}`).textContent = stocks[productId];
+        }
+
+        function updateCartUI() {
+            const cartList = document.getElementById('cart-list');
+            cartList.innerHTML = ''; // Clear existing items
+            cart.forEach(item => {
+                const li = document.createElement('li');
+                li.textContent = `\n${item.name} - ₱${item.perprice} (x${item.qty}) - ₱${item.price.toFixed(2)}`;
+                cartList.appendChild(li);
+            });
+		const totalPrice1 = totalPrice+1;//SHIPPING FEE IS 1.
+            document.getElementById('total-price').textContent = `Total: ₱${totalPrice1.toFixed(2)}`;
+        }
+
+        function checkout() {//open
+            if (cart.length === 0) {
+                alert('Your cart is empty!');
+                return;
+            }
+
+            if (cart.length !== 0) {
+		document.getElementById('checkoutbutton').disabled = true;
+		details.style.display="block";
+            //alert('Checkout successful! Total: ₱' + totalPrice.toFixed(2));
+		}
+           // cart = [];
+            //totalPrice = 0;
+           // updateCartUI();
+
+            // Re-enable all Add to Cart buttons and disable all Cancel buttons
+           // for (let productId in stocks) {
+             //   document.getElementById(`btn-product-${productId}`).disabled = false;
+             //   document.getElementById(`cancel-product-${productId}`).disabled = true;
+          //  }
+        }//close 
+
+//TELEGRAM OPEN 
+// Replace with your Telegram bot's token and chat ID
+        const BOT_TOKEN = "7870251548:AAGRB3mWjbj0NMmhZ_PsBxWXV0O13UMuWy8";
+        const CHAT_ID = "5208891145";
+
+        document.getElementById("telegramForm").addEventListener("submit", function(event) {
+            event.preventDefault();
+document.getElementById('placebutton').disabled = true;
+
+            const name = document.getElementById("name").value;
+            const address = document.getElementById("address").value;
+            const number = document.getElementById("number").value;
+            //const number2 = document.getElementById("number2").value;
+            const text = document.getElementById('cart-list').textContent;
+	    const total = document.getElementById('total-price').textContent;
+
+	document.getElementById('words').textContent = "We will sent you an order update.Thank you for shopping with us! ";
+            // Re-enable all Add to Cart buttons and disable all Cancel buttons
+            for (let productId in stocks) {//open
+                document.getElementById(`btn-product-${productId}`).disabled = true;
+                document.getElementById(`cancel-product-${productId}`).disabled = true;
+            }//close
+
+            const fullMessage = `.\n\nFrom: One Click Store\nCustomer: ${name}\nAddress: ${address}\nNumber: ${number}\nDate of Order: ${formattedDate}\nEstimated Date of Delivery\nFrom: ${formattedDate2}\nTo: ${formattedDate3}\n----------------------------------- \nOrdered Items:\n${text}\nService/Shipping Fee - ₱1.00\n\n${total}\n\n-----------------------------------\nCompany Address: Bonbon Upper, Loboc, Bohol\nSuggest Products Through:\nContact Us: 09941101238\nFB Page: One Click Store\n\nTHANK YOU FOR SHOPPING WITH US!`;
+
+            fetch(`https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`, {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify({
+                    chat_id: CHAT_ID,
+                    text: fullMessage
+                })
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.ok) {
+                    alert("Message sent to One Click Store!");
+                } else {
+                    alert("Failed to send message.");
+                }
+            })
+            .catch(error => {
+                console.error("Error:", error);
+                alert("An error occurred.");
+            });
+        });
+
+//TELEGRAM CLOSE
+
+
+//DATE FOR TODAY OPEN  
+// Get the current date
+        const today = new Date();
+
+        // Format the date as a readable string
+        const options = { year: 'numeric', month: 'long', day: 'numeric' };
+        const formattedDate = today.toLocaleDateString(undefined, options);
+//DATE FOR TODAY CLOSE
+
+// DATE TOMORROW OPEN 
+// Get today's date
+        //const today = new Date();
+
+        // Add one day to today's date
+        //const tomorrow = new Date();
+        today.setDate(today.getDate() + 1);
+
+        // Format the date as a readable string
+        const options2 = { year: 'numeric', month: 'long', day: 'numeric' };
+        const formattedDate2 = today.toLocaleDateString(undefined, options2);
+
+// DATE TOMORROW CLOSE 
+
+// DATE TOMORROW OPEN 
+// Get today's date
+        //const today = new Date();
+
+        // Add one day to today's date
+        //const tomorrow = new Date();
+        today.setDate(today.getDate() + 2);
+
+        // Format the date as a readable string
+        const options3 = { year: 'numeric', month: 'long', day: 'numeric' };
+        const formattedDate3 = today.toLocaleDateString(undefined, options3);
+
+// DATE TOMORROW CLOSE 
+
+
+    </script>
+
 
 </html>
