--- a/homefashion.html
+++ b/homefashion.html
@@ -46,8 +46,8 @@
             margin: 10px 0;
         }
         .product p {
-            color: #666;
-            font-size: 16px;
+            color: black;
+            font-size: 25px;
         }
         .product button {
             background-color: #007BFF;
