--- a/healthbeauty.html
+++ b/healthbeauty.html
@@ -127,132 +127,84 @@
 
     <div id="whole" class="container">
 
-        <!-- Product 17 -->
-        <div class="product" style="display:none;">
-            <img src="images/penblack.jpg">
-            <h3>MUJI Pen Black</h3>
-            <p>₱5.00</p>
-            <p>Stock: <span id="stock-product-17">50</span></p>
-            <input type="number" id="qty-product-17" min="1" max="50" value="1">
-            <button id="btn-product-17" onclick="addToCart('MUJI Pen Black', 5, 17)">Add to Cart</button>
-            <button id="cancel-product-17" onclick="cancelFromCart(17)" disabled>Cancel</button>
-        </div>
-
-        <!-- Product 18 -->
-        <div class="product" style="display:none;">
-            <img src="images/penblue.jpg">
-            <h3>MUJI Pen Blue</h3>
-            <p>₱5.00</p>
-            <p>Stock: <span id="stock-product-18">50</span></p>
-            <input type="number" id="qty-product-18" min="1" max="50" value="1">
-            <button id="btn-product-18" onclick="addToCart('MUJI Pen Blue', 5, 18)">Add to Cart</button>
-            <button id="cancel-product-18" onclick="cancelFromCart(18)" disabled>Cancel</button>
-        </div>
-	<!-- Product 19 -->
-        <div class="product" style="display:none;">
-            <img src="images/penred.jpg" >
-            <h3>MUJI Pen Red</h3>
-            <p>₱5.00</p>
-            <p>Stock: <span id="stock-product-19">25</span></p>
-            <input type="number" id="qty-product-19" min="1" max="25" value="1">
-            <button id="btn-product-19" onclick="addToCart('MUJI Pen Red', 5, 19)">Add to Cart</button>
-            <button id="cancel-product-19" onclick="cancelFromCart(19)" disabled>Cancel</button>
-        </div>
-
-
-
-
- <!-------------------------------------------------------------------------------------------------- NEON PRODUCTS OPEN -->
- <!-- Product 20 -->
-        <div class="product" style="display:none;">
-            <img src="images/neonpink.png">
-            <h3>Neon Pink (Short)</h3>
-            <p>₱0.00</p>
-            <p>Stock: <span id="stock-product-20">0</span></p>
-            <input type="number" id="qty-product-20" min="1" max="0" value="1">
-            <button id="btn-product-20" onclick="addToCart('Neon Pink (Short)', 10, 20)">Add to Cart</button>
-            <button id="cancel-product-20" onclick="cancelFromCart(20)" disabled>Cancel</button>
-        </div>
-
- <!-- Product 21 -->
-        <div class="product" style="display:none;">
-            <img src="images/neonred.png">
-            <h3>Neon Red (Short)</h3>
-            <p>₱0.00</p>
-            <p>Stock: <span id="stock-product-21">0</span></p>
-            <input type="number" id="qty-product-21" min="1" max="0" value="1">
-            <button id="btn-product-21" onclick="addToCart('Neon Red (Short)', 10, 21)">Add to Cart</button>
-            <button id="cancel-product-21" onclick="cancelFromCart(21)" disabled>Cancel</button>
-        </div>
-
- <!-- Product 22 -->
-        <div class="product" style="display:none;">
-            <img src="images/neongreen.png">
-            <h3>Neon Green (Short)</h3>
-            <p>₱0.00</p>
-            <p>Stock: <span id="stock-product-22">0</span></p>
-            <input type="number" id="qty-product-22" min="1" max="0" value="1">
-            <button id="btn-product-22" onclick="addToCart('Neon Green (Short)', 10, 22)">Add to Cart</button>
-            <button id="cancel-product-22" onclick="cancelFromCart(22)" disabled>Cancel</button>
-        </div>
-
- <!-- Product 23 -->
-        <div class="product" style="display:none;">
-            <img src="images/neonorange.png">
-            <h3>Neon Orange (Short)</h3>
-            <p>₱0.00</p>
-            <p>Stock: <span id="stock-product-23">0</span></p>
-            <input type="number" id="qty-product-23" min="1" max="0" value="1">
-            <button id="btn-product-23" onclick="addToCart('Neon Orange (Short)', 10, 23)">Add to Cart</button>
-            <button id="cancel-product-23" onclick="cancelFromCart(23)" disabled>Cancel</button>
-        </div>
-
- <!-- Product 24 -->
-        <div class="product" style="display:none;">
-            <img src="images/neonyellow.png">
-            <h3>Neon Yellow (Short)</h3>
-            <p>₱0.00</p>
-            <p>Stock: <span id="stock-product-24">0</span></p>
-            <input type="number" id="qty-product-24" min="1" max="0" value="1">
-            <button id="btn-product-24" onclick="addToCart('Neon Yellow (Short)', 10, 24)">Add to Cart</button>
-            <button id="cancel-product-24" onclick="cancelFromCart(24)" disabled>Cancel</button>
-        </div>
-
- <!-- Product 25 -->
-        <div class="product" style="display:none;">
-            <img src="images/neonviolet.jpg">
-            <h3>Neon Violet (Short)</h3>
-            <p>₱0.00</p>
-            <p>Stock: <span id="stock-product-25">0</span></p>
-            <input type="number" id="qty-product-25" min="1" max="0" value="1">
-            <button id="btn-product-25" onclick="addToCart('Neon Violet (Short)', 10, 25)">Add to Cart</button>
-            <button id="cancel-product-25" onclick="cancelFromCart(25)" disabled>Cancel</button>
-        </div>
-
- <!-- Product 26 -->
-        <div class="product" style="display:none;">
-            <img src="images/neonblue.jpg">
-            <h3>Neon Blue (Short)</h3>
-            <p>₱0.00</p>
-            <p>Stock: <span id="stock-product-26">0</span></p>
-            <input type="number" id="qty-product-26" min="1" max="0" value="1">
-            <button id="btn-product-26" onclick="addToCart('Neon Blue (Short)', 10, 26)">Add to Cart</button>
-            <button id="cancel-product-26" onclick="cancelFromCart(26)" disabled>Cancel</button>
-        </div>
 
 
  <!-------------------------------------------------------------------------------------------------- NEON PRODUCTS CLOSE -->
 
- <!-- Product 13 -->
-        <div class="product" style="display:none;">
-            <img src="images/glossyps.jpg">
-            <h3>Glossy Sticker Paper</h3>
-            <p>₱12.00</p>
-            <p>Stock: <span id="stock-product-13">5</span></p>
-            <input type="number" id="qty-product-13" min="1" max="5" value="1">
-            <button id="btn-product-13" onclick="addToCart('Glossy Sticker', 12, 13)">Add to Cart</button>
-            <button id="cancel-product-13" onclick="cancelFromCart(13)" disabled>Cancel</button>
+
+<!-- Product 139 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images4/almond2.jpg">
+            <h3>Almond</h3>
+            <h3>& Vanilla</h3>
+		<p style="color:black;font-size:80%;">(Perfume 236ml)</p>
+            <p><del>₱200.00</del></p>
+            <p>₱150.00</p>
+            <p>Stock: <span id="stock-product-139">2</span></p>
+            <input type="number" id="qty-product-139" min="1" max="1" value="1">
+            <button id="btn-product-139" onclick="addToCart('Warm Vanilla', 150, 139)">Add to Cart</button>
+            <button id="cancel-product-139" onclick="cancelFromCart(139)" disabled>Cancel</button>
         </div>
+
+
+<!-- Product 138 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images4/cherry.jpg">
+            <h3>Cherry</h3>
+            <h3>Blossoms</h3>
+		<p style="color:black;font-size:80%;">(Perfume 236ml)</p>
+            <p>₱200.00</p>
+            <p>Stock: <span id="stock-product-138">2</span></p>
+            <input type="number" id="qty-product-138" min="1" max="1" value="1">
+            <button id="btn-product-138" onclick="addToCart('Warm Vanilla', 200, 138)">Add to Cart</button>
+            <button id="cancel-product-138" onclick="cancelFromCart(138)" disabled>Cancel</button>
+        </div>
+
+
+<!-- Product 137 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images4/bloom.jpg">
+            <h3>Autumn</h3>
+            <h3>Blooms</h3>
+		<p style="color:black;font-size:80%;">(Perfume 236ml)</p>
+            <p><del>₱200.00</del></p>
+            <p>₱150.00</p>
+            <p>Stock: <span id="stock-product-137">2</span></p>
+            <input type="number" id="qty-product-137" min="1" max="1" value="1">
+            <button id="btn-product-137" onclick="addToCart('Autumn Blooms', 150, 137)">Add to Cart</button>
+            <button id="cancel-product-137" onclick="cancelFromCart(137)" disabled>Cancel</button>
+        </div>
+
+
+<!-- Product 136 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images4/cocomelon2.jpg">
+            <h3>Cucumber</h3>
+            <h3>Melon</h3>
+		<p style="color:black;font-size:80%;">(Perfume 236ml)</p>
+            <p>₱200.00</p>
+            <p>Stock: <span id="stock-product-136">2</span></p>
+            <input type="number" id="qty-product-136" min="1" max="1" value="1">
+            <button id="btn-product-136" onclick="addToCart('Cucumber Melon', 200, 136)">Add to Cart</button>
+            <button id="cancel-product-136" onclick="cancelFromCart(136)" disabled>Cancel</button>
+        </div>
+
+
+<!-- Product 135 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images4/warm2.jpg">
+            <h3>Warm</h3>
+            <h3>Vanilla</h3>
+		<p style="color:black;font-size:80%;">(Perfume 236ml)</p>
+            <p><del>₱200.00</del></p>
+            <p>₱150.00</p>
+            <p>Stock: <span id="stock-product-135">2</span></p>
+            <input type="number" id="qty-product-135" min="1" max="1" value="1">
+            <button id="btn-product-135" onclick="addToCart('Warm Vanilla', 150, 135)">Add to Cart</button>
+            <button id="cancel-product-135" onclick="cancelFromCart(135)" disabled>Cancel</button>
+        </div>
+
+
 
 <!-- Product 77 -->
         <div class="product" style="line-height:0.5;">
@@ -265,7 +217,7 @@
             <p>Stock: <span id="stock-product-77">10</span></p>
             <input type="number" id="qty-product-77" min="1" max="10" value="1">
             <button id="btn-product-77" onclick="addToCart('Lovely Dreamer', 19, 77)">Add to Cart</button>
-            <button id="cancel-product-77" onclick="cancelFromCart(77)" disabled>Cancel</button>
+            <button id="cancel-product-77" onclick="cancelFromCart(77)" style="background:red;" disabled>Cancel</button>
         </div>
 <!-- Product 78 -->
         <div class="product" style="line-height:0.5;">
@@ -559,7 +511,8 @@
         let totalPrice = 0;
         let stocks = { 1: 10, 2: 10, 3: 10, 4:10, 5:10, 6:5, 7:5, 8:5, 9:10, 10:10,
 			 11:10, 12:10, 13:5, 14:5, 15:5, 16:5, 17:50, 18:50, 19:25, 20:0,
-			20:0, 21:0, 22:0, 23:0, 24:0, 25:0, 26:0, 77:10, 78:10, 79:10, 80:10, }; // Initial stock levels
+			20:0, 21:0, 22:0, 23:0, 24:0, 25:0, 26:0, 77:10, 78:10, 79:10, 80:10,
+			135:1,136:1,137:1,138:1,139:1, }; // Initial stock levels
 
         function addToCart(productName, price, productId) {
             const qtyInput = document.getElementById(`qty-product-${productId}`);
