--- a/healthbeauty.html
+++ b/healthbeauty.html
@@ -142,7 +142,7 @@
             <p>₱150.00</p>
             <p>Stock: <span id="stock-product-139">2</span></p>
             <input type="number" id="qty-product-139" min="1" max="1" value="1">
-            <button id="btn-product-139" onclick="addToCart('Warm Vanilla', 150, 139)">Add to Cart</button>
+            <button id="btn-product-139" onclick="addToCart('Almond & Vanilla', 150, 139)">Add to Cart</button>
             <button id="cancel-product-139" onclick="cancelFromCart(139)" disabled>Cancel</button>
         </div>
 
@@ -156,7 +156,7 @@
             <p>₱200.00</p>
             <p>Stock: <span id="stock-product-138">2</span></p>
             <input type="number" id="qty-product-138" min="1" max="1" value="1">
-            <button id="btn-product-138" onclick="addToCart('Warm Vanilla', 200, 138)">Add to Cart</button>
+            <button id="btn-product-138" onclick="addToCart('Cherry Blossoms', 200, 138)">Add to Cart</button>
             <button id="cancel-product-138" onclick="cancelFromCart(138)" disabled>Cancel</button>
         </div>
 
