--- a/new.html
+++ b/new.html
@@ -143,6 +143,93 @@
 
     <div id="whole" class="container">
 
+<!-- Product 145 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images4/bourbon2.jpg">
+            <h3>Bourbon</h3>
+            <h3>For Men</h3>
+		<p style="color:black;font-size:80%;">(Perfume 236ml)</p>
+            <p>₱200.00</p>
+            <p>Stock: <span id="stock-product-145">2</span></p>
+            <input type="number" id="qty-product-145" min="1" max="1" value="1">
+            <button id="btn-product-145" onclick="addToCart('Bourbon (236ml)', 200, 145)">Add to Cart</button>
+            <button id="cancel-product-145" onclick="cancelFromCart(145)" disabled>Cancel</button>
+        </div>
+
+
+<!-- Product 144 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images4/paris2.jpg">
+            <h3>Paris</h3>
+            <h3>For Men</h3>
+		<p style="color:black;font-size:80%;">(Perfume 236ml)</p>
+            <p><del>₱200.00</del></p>
+            <p>₱150.00</p>
+            <p>Stock: <span id="stock-product-144">2</span></p>
+            <input type="number" id="qty-product-144" min="1" max="1" value="1">
+            <button id="btn-product-144" onclick="addToCart('Paris (236ml)', 150, 144)">Add to Cart</button>
+            <button id="cancel-product-144" onclick="cancelFromCart(144)" disabled>Cancel</button>
+        </div>
+
+
+<!-- Product 143 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images4/ocean2.jpg">
+            <h3>Ocean</h3>
+            <h3>For Men</h3>
+		<p style="color:black;font-size:80%;">(Perfume 236ml)</p>
+            <p>₱200.00</p>
+            <p>Stock: <span id="stock-product-143">2</span></p>
+            <input type="number" id="qty-product-143" min="1" max="1" value="1">
+            <button id="btn-product-143" onclick="addToCart('Ocean (236ml)', 200, 143)">Add to Cart</button>
+            <button id="cancel-product-143" onclick="cancelFromCart(143)" disabled>Cancel</button>
+        </div>
+
+
+<!-- Product 142 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images4/atlantic2.jpg">
+            <h3>Atlantic</h3>
+            <h3>For Men</h3>
+		<p style="color:black;font-size:80%;">(Perfume 236ml)</p>
+            <p><del>₱200.00</del></p>
+            <p>₱150.00</p>
+            <p>Stock: <span id="stock-product-142">2</span></p>
+            <input type="number" id="qty-product-142" min="1" max="1" value="1">
+            <button id="btn-product-142" onclick="addToCart('Atlantic (236ml)', 150, 142)">Add to Cart</button>
+            <button id="cancel-product-142" onclick="cancelFromCart(142)" disabled>Cancel</button>
+        </div>
+
+
+<!-- Product 141 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images4/coconut2.jpg">
+            <h3>Coconut</h3>
+            <h3>B & B Week</h3>
+		<p style="color:black;font-size:80%;">(Perfume 236ml)</p>
+            <p>₱200.00</p>
+            <p>Stock: <span id="stock-product-141">2</span></p>
+            <input type="number" id="qty-product-141" min="1" max="1" value="1">
+            <button id="btn-product-141" onclick="addToCart('Coconut (236ml)', 200, 141)">Add to Cart</button>
+            <button id="cancel-product-141" onclick="cancelFromCart(141)" disabled>Cancel</button>
+        </div>
+
+
+<!-- Product 140 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images4/steel2.jpg">
+            <h3>Steel</h3>
+            <h3>For Men</h3>
+		<p style="color:black;font-size:80%;">(Perfume 236ml)</p>
+            <p><del>₱200.00</del></p>
+            <p>₱150.00</p>
+            <p>Stock: <span id="stock-product-140">2</span></p>
+            <input type="number" id="qty-product-140" min="1" max="1" value="1">
+            <button id="btn-product-140" onclick="addToCart('Steel For Men', 150, 140)">Add to Cart</button>
+            <button id="cancel-product-140" onclick="cancelFromCart(140)" disabled>Cancel</button>
+        </div>
+
+
 <!-- Product 139 -->
         <div class="product" style="line-height:0.5;">
             <img src="images4/almond2.jpg">
@@ -164,6 +251,7 @@
             <h3>Cherry</h3>
             <h3>Blossoms</h3>
 		<p style="color:black;font-size:80%;">(Perfume 236ml)</p>
+            <h3 style="color:red;">SOLD OUT</h3>
             <p>₱200.00</p>
             <p>Stock: <span id="stock-product-138">2</span></p>
             <input type="number" id="qty-product-138" min="1" max="1" value="1">
@@ -178,6 +266,7 @@
             <h3>Autumn</h3>
             <h3>Blooms</h3>
 		<p style="color:black;font-size:80%;">(Perfume 236ml)</p>
+            <h3 style="color:red;">SOLD OUT</h3>
             <p><del>₱200.00</del></p>
             <p>₱150.00</p>
             <p>Stock: <span id="stock-product-137">2</span></p>
@@ -462,6 +551,7 @@
             <h3>Winbook</h3>
             <h3>Sticky Notes</h3>
 		<p style="color:black;font-size:80%;">(Pink)</p>
+            <h3 style="color:red;">SOLD OUT</h3>
             <p>₱5.00</p>
             <p>Stock: <span id="stock-product-117">2</span></p>
             <input type="number" id="qty-product-117" min="1" max="2" value="1">
@@ -1842,9 +1932,10 @@
 			81:10, 82:10,83:10, 84:10,85:10, 86:10,87:10, 88:10,89:10, 90:10,
 			91:10, 92:10, 93:10, 94:10, 95:10,96:10,97:10,98:10,99:10,100:10,
 			101:10,102:10,103:10,104:10,105:2,106:2,107:2,108:2,109:2,110:2,
-			111:2,112:2,113:2,114:2,115:2,116:2,117:2,118:2,119:2,120:2,
+			111:2,112:2,113:2,114:2,115:2,116:2,117:0,118:2,119:2,120:2,
 			121:2,122:2,123:2,124:2,125:2,126:2,127:2,128:2,129:2,130:2,
-			131:2,132:2,133:2,134:30,135:1,136:1,137:1,138:1,139:1,}; // Initial stock levels
+			131:2,132:2,133:2,134:30,135:1,136:1,137:0,138:0,139:1, 140:1,
+			141:1,142:1,143:1,144:1,145:1,}; // Initial stock levels
 
         function addToCart(productName, price, productId) {
             const qtyInput = document.getElementById(`qty-product-${productId}`);
